<resources>
    <string name="app_name">Logmate</string>
    <string name="button_name">Button</string>
    <string name="my_issues">My High Priority Issues</string>
    <string name="all_issues">All Issues</string>
    <string name="log_issue">Log Issue</string>
    <string name="my_low_priority_issues">My Low Priority Issues</string>
    <string name="my_medium_priority_issues">My Medium Priority Issues</string>
    <string name="closed_issues">Closed Issues</string>
    <string name="pop_b2">Assign to me</string>
    <string name="pop_b1">Close</string>

    <string-array name="array_name">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
</resources>
