<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.example.peterdowling.logmate.MainActivity">

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.peterdowling.logmate.MainActivity">

    <TextView
        android:id="@+id/textViewUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Medium Text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />



    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layoutOne"
        android:layout_below="@+id/textViewUserEmail">

        <Button android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:id="@+id/highPriorityButton"
            android:text="@string/my_issues"/>

        <Button
            android:id="@+id/getData"
            android:layout_width="fill_parent"
            android:layout_height="175dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:text="@string/all_issues" />

    </LinearLayout>

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layoutTwo"
        android:layout_below="@+id/layoutOne">

        <Button android:layout_width="fill_parent"
            android:layout_height="204dp"
            android:layout_weight="0.99"
            android:layout_margin="1dp"
            android:id="@+id/LogIssueButton"
            android:text="@string/log_issue"/>

        </LinearLayout>


    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layoutThree"
        android:layout_below="@+id/layoutTwo">

        <Button android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:id="@+id/lowPriorityButton"
            android:text="@string/my_low_priority_issues"/>

        <Button
            android:id="@+id/mediumPriorityButton"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:text="@string/my_medium_priority_issues" />

        <Button
            android:id="@+id/closed_issues"
            android:layout_width="fill_parent"
            android:layout_height="175dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:text="@string/closed_issues" />

    </LinearLayout>

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_below="@+id/layoutThree">

    <Button android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:layout_margin="1dp"
        android:id="@+id/buttonLogout"
        android:text="Logout"
        />

    </LinearLayout>
</RelativeLayout>
</ScrollView>